# spotuify

./: Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: ci.yml  release.yml
examples/: probe.rs
src/: albumart.rs  analyzer.rs  app.rs  audio.rs  auth.rs  browse.rs  config.rs  cookie.rs  eq.rs  keys.rs  lyrics.rs  main.rs  media.rs  message.rs  model.rs  mpris.rs  pathfinder.rs  persist.rs  player.rs  snapshot.rs  spotify.rs  theme.rs  ui.rs  update.rs  webtoken.rs
