[package]
name = "spotuify"
version = "0.1.0"
edition = "2021"
description = "A terminal UI Spotify client for Linux with local playback, search, playlists, queues, output selection and colored album art."
license = "MIT"
readme = "README.md"
default-run = "spotuify"

[[bin]]
name = "spotuify"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Spotify Web API (search, playlists, library, queue, devices, metadata)
rspotify = { version = "0.13", default-features = false, features = [
    "client-reqwest",
    "reqwest-rustls-tls",
] }

# Local playback engine (open-source Spotify client) + OAuth helper.
# 0.8 requires an explicit TLS choice; use rustls to match the rest of the app.
librespot = { version = "0.8", default-features = false, features = [
    "rodio-backend",
    "rustls-tls-native-roots",
] }

# Audio output device enumeration (for media output selection). Kept in lockstep
# with librespot's rodio backend so device names match.
cpal = "0.16"

# Album art
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# TLS: with both `ring` and `aws-lc-rs` in the graph, rustls 0.23 cannot pick a
# crypto provider automatically, so we install one explicitly in `main`. Pull in
# rustls directly to expose the `ring` provider.
rustls = { version = "0.23", features = ["ring"] }

# Config & misc
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
open = "5"

# Logging to a file (TUI owns the terminal, so logs can't go to stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde_json = "1.0.150"
zbus = { version = "5.15.0", default-features = false, features = ["tokio"] }
ratatui-image = "4"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
